--- a/settings.html
+++ b/settings.html
@@ -19,7 +19,7 @@
       <a href="reports.html"><span>Reports</span></a>
       <a href="resources.html"><span>Resources</span></a>
       <a href="clients.html"><span>Clients</span></a>
-      <a class="is-active" aria-current="page" href="settings.html"><span>Settings</span></a>
+      <a class="is-active" href="settings.html"><span>Settings</span></a>
     </nav>
   </aside>
   <div class="main">
