--- a/client.html
+++ b/client.html
@@ -26,7 +26,7 @@
       <a href="timesheets.html"><span>Timesheets</span></a>
       <a href="reports.html"><span>Reports</span></a>
       <a href="resources.html"><span>Resources</span></a>
-      <a class="is-active" aria-current="page" href="client.html"><span>Client</span></a>
+      <a class="is-active" href="client.html"><span>Client</span></a>
       <a href="settings.html"><span>Settings</span></a>
     </nav>
   </aside>
@@ -44,7 +44,7 @@
       <nav class="breadcrumbs">Home / Client</nav>
 
       <section class="grid grid-3 mt-6">
-        <article class="card card-approve" data-tooltip="Toggle to simulate approval">
+        <article class="card card-approve">
           <h3 style="margin-top:0">Acme Website Revamp</h3>
           <div class="progress"><div class="bar"><span style="--w:48%"></span></div><span class="label">48%</span></div>
           <p class="text-muted">Current Stage: Content Writing</p>
