Update role hierarchy in live demo
- Add Super Admin role to index.html with proper color coding
- Update role descriptions to match new hierarchy
- Create super-admin.html page with system-wide dashboard
- Implement Super Admin → Admin → PM → Team → Client flow
- Add impersonation modal for Super Admin functionality

--- a/index.html
+++ b/index.html
@@ -28,25 +28,30 @@
       <div class="card">
         <h2 style="margin-top:0">Select a role</h2>
         <div class="role-grid mt-4">
+          <a class="role-card" href="super-admin.html">
+            <h3>Super Admin</h3>
+            <p>System-wide control, audit logs, and global settings.</p>
+            <span class="chip"><span class="dot" style="background: #000000;"></span>System Control</span>
+          </a>
           <a class="role-card" href="admin.html">
             <h3>Admin</h3>
-            <p>Full visibility across projects and teams.</p>
-            <span class="chip"><span class="dot teal"></span>All Projects</span>
+            <p>Organization operations, user management, and project oversight.</p>
+            <span class="chip"><span class="dot" style="background: #475569;"></span>All Projects</span>
           </a>
           <a class="role-card" href="manager.html">
-            <h3>PM / Dept Head</h3>
-            <p>Department view, actions & workflow triggers.</p>
-            <span class="chip"><span class="dot saffron"></span>Scoped</span>
+            <h3>Project Manager</h3>
+            <p>Portfolio management, stage control, and team coordination.</p>
+            <span class="chip"><span class="dot" style="background: #4F46E5;"></span>My Portfolio</span>
           </a>
           <a class="role-card" href="team.html">
             <h3>Team Member</h3>
-            <p>Assigned tasks, resources and timesheets.</p>
-            <span class="chip"><span class="dot emerald"></span>My Work</span>
+            <p>Assigned tasks, timesheet logging, and resource access.</p>
+            <span class="chip"><span class="dot" style="background: #0D9488;"></span>My Work</span>
           </a>
           <a class="role-card" href="client.html">
             <h3>Client</h3>
-            <p>Project status, deliverables approvals, activity.</p>
-            <span class="chip"><span class="dot teal"></span>Read-only</span>
+            <p>Project oversight, approvals, and feedback submission.</p>
+            <span class="chip"><span class="dot" style="background: #2563EB;"></span>Read-only</span>
           </a>
         </div>
       </div>
