Implement Master Setup navigation and Departments page
- Add Master Setup expandable submenu to admin.html navigation
- Add CSS styles for Master Setup submenu with hover effects
- Create departments.html page with analytics widgets and CRUD operations
- Include sample data: 12 departments, 24 sub-departments, 85% coverage
- Add New Department modal with form validation
- Implement role-based access (Admin only)

Now visible on live site: Master Setup → Departments

--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,15 @@
       <a href="timesheets.html"><span>Timesheets</span></a>
       <a href="reports.html"><span>Reports</span></a>
       <a href="resources.html"><span>Resources</span></a>
+      <details class="master-setup">
+        <summary><span>Master Setup</span></summary>
+        <div class="submenu">
+          <a href="departments.html"><span>Departments</span></a>
+          <a href="projects-master.html"><span>Projects</span></a>
+          <a href="users.html"><span>Users</span></a>
+          <a href="stages.html"><span>Stages</span></a>
+        </div>
+      </details>
       <a href="clients.html"><span>Clients</span></a>
       <a href="settings.html"><span>Settings</span></a>
     </nav>
