Update admin.html navigation to link to new mockup pages
- Fix Master Setup links to point to users-mockup.html and stages-mockup.html
- Add new Project Lifecycle section with links to:
  - customer-mockup.html (Customer Management)
  - health-tracking-mockup.html (Health Tracking)
  - ai-insights-mockup.html (AI Insights)
- All mockup pages now accessible from main admin dashboard navigation

--- a/admin.html
+++ b/admin.html
@@ -23,8 +23,16 @@
         <div class="submenu">
           <a href="departments.html"><span>Departments</span></a>
           <a href="projects-master.html"><span>Projects</span></a>
-          <a href="users.html"><span>Users</span></a>
-          <a href="stages.html"><span>Stages</span></a>
+          <a href="users-mockup.html"><span>Users</span></a>
+          <a href="stages-mockup.html"><span>Stages</span></a>
+        </div>
+      </details>
+      <details class="project-lifecycle">
+        <summary><span>Project Lifecycle</span></summary>
+        <div class="submenu">
+          <a href="customer-mockup.html"><span>Customers</span></a>
+          <a href="health-tracking-mockup.html"><span>Health Tracking</span></a>
+          <a href="ai-insights-mockup.html"><span>AI Insights</span></a>
         </div>
       </details>
       <a href="clients.html"><span>Clients</span></a>
